fix: spacing adjustments

--- a/packages/components/src/components/collapsible/collapsible.css
+++ b/packages/components/src/components/collapsible/collapsible.css
@@ -31,7 +31,7 @@
 
   /* content */
   --spacing-right-content: var(--telekom-spacing-unit-x12);
-  --spacing-left-content: var(--telekom-spacing-unit-x9);
+  --spacing-left-content: 34px;
   --spacing-top-content: var(--telekom-spacing-unit-x4);
   --spacing-bottom-content: var(--telekom-spacing-unit-x6);
 }
